[tool.poetry]
name = "campaign-id-generator"
version = "0.1.0"
description = "generator of campaign ids based on intent"
authors = ["gaurav.dani <gaurav.dani@joyn.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.44.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
